prevent overflow from padding

--- a/static/styles/cds.less
+++ b/static/styles/cds.less
@@ -23,6 +23,7 @@ body {
   min-height: 100vh;
   min-width: 240px;  // KaiOS device
   padding-top: @height-min-header;
+  box-sizing: border-box;
   position: relative;
   font-family: 'Open Sans', 'Roboto', 'Arial', 'Helvetica', sans-serif;
   line-height: 1;
